# js-proofofwork

./: CMakeLists.txt  license.md  readme.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  index.htm  main.cpp  main.js  packer.py
